<resources>
    <string name="app_name">InstantMessaging</string>
    <string name="message_hint">Message...</string>
    <string name="logout">Wyloguj</string>
    <string name="log_in">LOG IN</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Password</string>
    <string name="login_forgotPassword">Zapomniałeś hasła?</string>
    <string name="login_facebook_text">Facebook</string>
    <string name="login_twitter_text">Twitter</string>
</resources>
