<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.instantmessaging.SignInActivity"
    tools:background="@android:color/holo_blue_dark">

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:src="@drawable/ic_back"
        android:id="@+id/login_back"
        app:backgroundTint="@android:color/holo_blue_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textColor="@android:color/white"
        android:id="@+id/login_text"
        android:textSize="36sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@android:color/holo_blue_dark"/>

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="167dp"
        android:layout_below="@+id/login_text"
        android:layout_alignParentStart="true"
        android:id="@+id/login_login"
        android:hint="@string/login_hint_email"
        android:textColorLink="@android:color/white"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorHighlight="@android:color/white" />


    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_login"
        android:layout_alignParentStart="true"
        android:id="@+id/login_password"
        android:hint="@string/login_hint_password"
        android:textColorLink="@android:color/white"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorHighlight="@android:color/white" />

    <android.support.design.widget.FloatingActionButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_login"
        android:id="@+id/login_send"
        android:layout_below="@id/login_password"
        app:backgroundTint="@android:color/holo_orange_light" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_forgotPassword"
        android:textColor="@android:color/white"
        android:id="@+id/login_forgotPassword"
        android:textSize="18sp"
        android:layout_below="@id/login_send"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:layout_marginTop="16dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="1.0" >

        <Button
            android:id="@+id/login_facebook"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_width="0dip"
            android:textColor="@android:color/white"
            android:background="#0D47A1"
            android:text="@string/login_facebook_text"
            android:layout_marginRight="8dp"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/login_twitter"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_width="0dip"
            android:textColor="@android:color/white"
            android:background="#90CAF9"
            android:text="@string/login_twitter_text"
            android:textSize="12sp"/>

    </LinearLayout>

</RelativeLayout>
